overflow bug fixed-issue#92

--- a/public/style/testcaman.css
+++ b/public/style/testcaman.css
@@ -30,20 +30,12 @@
 	width: 500px;
 }*/
 .disappear{
-	height: 300px;
-	width: 500px;
+	position: relative;
 	text-align: center;
 	padding: 20px;
 	border-radius: 4px;
 
 }
-
-.card{
-    overflow: auto;
+.pic-card{
+    width: 200px;
 }
-.triple-btn{
-	margin: 10%;
-}
-/*.row{
-	bs-gutter-x: 6rem;
-}*/
